Modulo 3/laboratorio-2/app-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-a
spec:
  containers:
  - name: app-a-container
    image: nginx
